refactor: 重构权限加载接口，使用 AdminCache 替代 RedisCache，优化角色和权限获取逻辑