@@ -1,10 +1,15 @@
 package com.ezadmin.common.auth;
 
 import cn.dev33.satoken.stp.StpInterface;
-import com.ezadmin.common.component.RedisCache;
+import com.ezadmin.common.cache.AdminCache;
+import com.ezadmin.model.vo.MenuPermissionVO;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 
+import java.util.Collections;
 import java.util.List;
+
 
 /**
  * <p>
@@ -14,32 +19,28 @@ import java.util.List;
  * @author shenyang
  * @since 2024-12-02 15:40:09
  */
+@Component
 @RequiredArgsConstructor
 public class StpInterfaceImpl implements StpInterface {
 
-    private final RedisCache redisCache;
+    private final AdminCache adminCache;
 
     @Override
     public List<String> getPermissionList(Object loginId, String loginType) {
-        return List.of();
-//        // 获取用户角色
-//        List<String> roleLabelList = getRoleList(loginId, loginType);
-//        // 从缓存中获取角色权限
-//        if (roleLabelList.isEmpty()) {
-//            return new ArrayList<>();
-//        }
-//        Set<MenuPermissionVO> menuPermissionVOSet = new HashSet<>();
-//        for (String roleLabelItem : roleLabelList) {
-//            List<MenuPermissionVO> roleMenu = getMenuByRoleLabel(roleLabelItem);
-//            menuPermissionVOSet.addAll(roleMenu);
-//        }
-//        return menuPermissionVOSet.stream().map(MenuPermissionVO::getMenuPerm).toList();
+        List<String> roleLabelList = getRoleList(loginId, loginType);
+        if (roleLabelList.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<MenuPermissionVO> menuPermissions = adminCache.getMenuByRoleLabels(roleLabelList);
+        if (menuPermissions == null || menuPermissions.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return menuPermissions.stream()
+            .map(MenuPermissionVO::getMenuPerm)
+            .filter(StringUtils::hasText)
+            .distinct()
+            .toList();
     }
-
-//    private List<MenuPermissionVO> getMenuByRoleLabel(String roleLabel) {
-//        String roleKey = RedisKey.ROLE_MENU + roleLabel;
-//        return redisCache.getCacheObject(roleKey);
-//    }
 
     /**
      * 获取角色列表
@@ -50,10 +51,24 @@ public class StpInterfaceImpl implements StpInterface {
      */
     @Override
     public List<String> getRoleList(Object loginId, String loginType) {
-//        String userRolesKey = RedisKey.USER_ROLE + loginId;
-//        if (Boolean.TRUE.equals(redisCache.hasKey(userRolesKey))) {
-//            return redisCache.getCacheObject(userRolesKey);
-//        }
-        return List.of();
+        if (loginId == null) {
+            return Collections.emptyList();
+        }
+        Long userId = parseUserId(loginId);
+        if (userId == null) {
+            return Collections.emptyList();
+        }
+        return adminCache.getUserRoles(userId);
+    }
+
+    private Long parseUserId(Object loginId) {
+        try {
+            if (loginId instanceof Number number) {
+                return number.longValue();
+            }
+            return Long.parseLong(String.valueOf(loginId));
+        } catch (NumberFormatException e) {
+            return null;
+        }
     }
 }
